--- a/Project/contactus.html
+++ b/Project/contactus.html
@@ -29,20 +29,25 @@
         <li class="nav-item"><a href="contactus.html">Contact Us</a></li>
     </ul>
   </nav>
-  <div class="row">
-    <div class="col-12 content" style="text-align: center;">
-      <form method="GET" action="search.php">
-        <h4><label for="Name">Name:</label></h4>
-        <input type="text" id="Name" name="Name" style="width: 28%; height: 35px;"><br>
-          <h4><label for="EmailAddress">Email Address:</label></h4>
-          <input type="text" id="EmailAddress" name="EmailAddress" style="width: 28%; height: 35px;"><br>
-          <h4><label for="Message">Message:</label></h4>
-          <input type="text" id="Message" name="Message" style="width: 28%; height: 200px;"><br><br>
-          <button type="submit" id="Button" style="color: black;">Submit</button>
+  <div class="content">
+    <div class="form-container" style="text-align: center;">
+      <form method="GET" action="contactussuccess.html" class="form-grid">
+        <div class="form-group" id="Name">
+        <label for="Name">Name:</label>
+        <input type="text" id="Name" name="Name">
+      </div>
+      <div class="form-group" id="Email">
+        <label for="Email">Email:</label>
+        <input type="text" id="Email" name="Email">
+      </div>
+      <div class="form-group" id="Message">
+        <label for="Message">Message:</label>
+        <textarea id="Message" name="Message"></textarea>
+      </div>
+          <button type="SearchInstitution" id="searchinstitution-button" style="color: black;">Contact Us</button>
       </form>
     </div>
   </div>
-
   <div class="footer">
     <p>@Copyright- Studitute Portal: Empowering your Educational Journey</p>
   </div>
