--- a/Project/crosscredit.html
+++ b/Project/crosscredit.html
@@ -29,19 +29,26 @@
         <li class="nav-item"><a href="contactus.html">Contact Us</a></li>
     </ul>
   </nav>
-  <div class="row">
-    <div class="col-12 content" style="text-align: center;">
-      <form method="GET" action="resultofcrosscredit.html">
-        <h4><label for="sourceInstitution">Source Institution:</label></h4>
-        <input type="textarea" id="sourceInstitution" name="sourceInstitution" style="width: 28%; height: 35px;"><br><br>
-          <h4><label for="Course">Course:</label></h4>
-          <input type="textarea" id="Course" name="Course" style="width: 28%; height: 35px;"><br><br>
-          <h4><label for="destination">Destination Institution:</label></h4>
-          <input type="textarea" id="destination" name="destination" style="width: 28%; height: 35px;"><br><br>
-          <button type="Crosscredit" id="crosscredit-button" style="color: black;">Check Cross Credit</button>
+  <div class="content">
+    <div class="form-container" style="text-align: center;">
+      <form method="GET" action="resultofcrosscredit.html" class="form-grid">
+        <div class="form-group" id="SourceInstitution">
+        <label for="SourceInstitution">Source Institution:</label>
+        <input type="text" id="SourceInstitution" name="SourceInstitution">
+      </div>
+      <div class="form-group" id="Location">
+        <label for="Location">Location:</label>
+        <input type="text" id="Location" name="Location">
+      </div>
+      <div class="form-group" id="DestinationInstitution">
+        <label for="DestinationInstitution">Destination Institution:</label>
+        <input type="text" id="DestinationInstitution" name="DestinationInstitution">
+      </div>
+          <button type="SearchInstitution" id="searchinstitution-button" style="color: black;">Check Your Cross Credit</button>
       </form>
     </div>
   </div>
+
 
   <div class="footer">
     <p>@Copyright- Studitute Portal: Empowering your Educational Journey</p>
