--- a/Project/userprofile.html
+++ b/Project/userprofile.html
@@ -1,42 +1,68 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="design.css">
-<script src="mywebscript.js"></script>
-<link rel="icon" type="image/png" href="Favicon.png">
-<title>User Profile - Studitute Portal</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="design.css">
+    <link rel="icon" type="image/png" href="Favicon.png">
+    <title>User Profile - Studitute Portal</title>
 </head>
 <body>
 
-  <div class="header">
-    <a href="homepage.html"  class="logo-container"><img src="Logo.jpg" alt="Logo" class="logo"></a>
-    <div class="title-container">
-      <div class="title">Studitute Portal</div>
-      <p class="subtitle">Empowering your Educational Journey</p>
+    <div class="header">
+        <a href="homepage.html" class="logo-container">
+            <img src="Logo.jpg" alt="Logo" class="logo">
+        </a>
+        <div class="title-container">
+            <div class="title">Studitute Portal</div>
+            <p class="subtitle">Empowering your Educational Journey</p>
+        </div>
+        <div class="profile">
+            <img class="guest" src="UserProfile.jpg" alt="User pic"><br>
+            <h3>User Name</h3>
+        </div>
     </div>
-    <div class="profile"><a href="login.html">
-      <img class="guest" src="Guest.jpg" alt="Guest pic"><br>
-      <h3>Log In</h3></a>
+
+    <nav>
+        <ul class="nav-list">
+            <li class="nav-item"><a href="searchpage.html">Search</a></li>
+            <li class="nav-item"><a href="crosscredit.html">Cross Credit</a></li>
+            <li class="nav-item"><a href="fav.html">Favorites</a></li>
+            <li class="nav-item"><a href="contactus.html">Contact Us</a></li>
+        </ul>
+    </nav>
+
+    <div class="profile-container">
+        <div class="profile-card">
+            <h2>User Profile</h2>
+            <div class="profile-info">
+                <label>User Name:</label>
+                <p>John Doe</p>
+            </div>
+            <div class="profile-info">
+                <label>Email Address:</label>
+                <p>johndoe@example.com</p>
+            </div>
+            <div class="profile-info">
+                <label>Mobile Number:</label>
+                <p>+1234567890</p>
+            </div>
+            <div class="profile-info">
+                <label>Date of Birth:</label>
+                <p>January 1, 1990</p>
+            </div>
+            <div class="profile-info">
+                <label>Short Information:</label>
+                <p>Passionate about learning, exploring new technologies, and contributing to the educational community.</p>
+            </div>
+            <div class="edit-profile-link">
+                <a href="editprofile.html">Edit Profile</a>
+            </div>
+        </div>
     </div>
-  </div>
 
-  <nav>
-    <ul class="nav-list">
-        <li class="nav-item"><a href="searchpage.html">Search</a></li>
-        <li class="nav-item"><a href="crosscredit.html">Cross Credit</a></li>
-        <li class="nav-item"><a href="fav.html">Favorites</a></li>
-        <li class="nav-item"><a href="contactus.html">Contact Us</a></li>
-    </ul>
-  </nav>
-
-  <div class="content">
-    <p style="text-align: center:justify; font-size: 30px;">Et irure enim irure eiusmod. Commodo sunt qui dolor labore. Commodo cillum ex enim aliquip. Dolore ullamco dolore veniam occaecat sint laborum dolor id consequat officia dolor consequat. Labore Lorem Lorem dolor ex. Proident ea tempor tempor voluptate eu incididunt quis consequat velit exercitation do.</p>
-  </div>
-
-  <div class="footer">
-    <p>@Copyright- Studitute Portal: Empowering your Educational Journey</p>
-  </div>
+    <div class="footer">
+        <p>&copy; Studitute Portal: Empowering your Educational Journey</p>
+    </div>
 
 </body>
 </html>
