--- a/Project/resultofcrosscredit.html
+++ b/Project/resultofcrosscredit.html
@@ -29,9 +29,31 @@
         <li class="nav-item"><a href="contactus.html">Contact Us</a></li>
     </ul>
   </nav>
-
-  <div class="content">
-    <p style="text-align: center:justify; font-size: 30px;">Et irure enim irure eiusmod. Commodo sunt qui dolor labore. Commodo cillum ex enim aliquip. Dolore ullamco dolore veniam occaecat sint laborum dolor id consequat officia dolor consequat. Labore Lorem Lorem dolor ex. Proident ea tempor tempor voluptate eu incididunt quis consequat velit exercitation do.</p>
+  <div class="content credit">
+    <h1 style="color: white;"> Available cross credits</h1>
+    <h2 style="color: white;"> Upon request these are the possible units that can be cross-credited </h2>
+    <table style="background-color: aliceblue;">
+      <tr>
+        <th>Units</th>
+        <th> Reason for possible cross-credit</th>
+      </tr>
+      <tr>
+        <td>Web Application</td>
+        <td>The unit learning objectives  of source institution and destination institution are similar.</td>
+      </tr>
+      <tr>
+        <td>Cyber security</td>
+        <td>The unit learning objectives  of source institution and destination institution are similar.</td>
+      </tr>
+      <tr>
+        <td>Programming</td>
+        <td>The unit learning objectives  of source institution and destination institution are similar.</td>
+      </tr>
+      <tr>
+        <td>Networking</td>
+        <td>The unit learning objectives  of source institution and destination institution are similar.</td>
+      </tr>
+    </table>
   </div>
 
   <div class="footer">
