--- a/Project/resultofsearch.html
+++ b/Project/resultofsearch.html
@@ -30,8 +30,50 @@
     </ul>
   </nav>
 
-  <div class="content">
-    <p style="text-align: center:justify; font-size: 30px;">Et irure enim irure eiusmod. Commodo sunt qui dolor labore. Commodo cillum ex enim aliquip. Dolore ullamco dolore veniam occaecat sint laborum dolor id consequat officia dolor consequat. Labore Lorem Lorem dolor ex. Proident ea tempor tempor voluptate eu incididunt quis consequat velit exercitation do.</p>
+  <div class="content result">
+    <h1 style="color: white;">Search Results</h1>
+    <table style="background-color: aliceblue;">
+      <tr>
+        <th>S.N</th>
+        <th> Institution Name</th>
+        <th>Tution Fee</th>
+        <th> Location</th>
+        <th> Duration</th>
+        <th>Course</th>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>XYZ university</td>
+        <td>8,500</td>
+        <td>Location</td>
+        <td>3 Years</td>
+        <td>Course</td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>EFG university</td>
+        <td>8,500</td>
+        <td>Location</td>
+        <td>3 Years</td>
+        <td>Course</td>
+      </tr>
+      <tr>
+        <td>3</td>
+        <td>ABC university</td>
+        <td>8,500</td>
+        <td>Location</td>
+        <td>3 Years</td>
+        <td>Course</td>
+      </tr>
+      <tr>
+        <td>4</td>
+        <td>IJK university</td>
+        <td>8,500</td>
+        <td>Location</td>
+        <td>3 Years</td>
+        <td>Course</td>
+      </tr>
+    </table>
   </div>
 
   <div class="footer">
