--- a/Project/searchpage.html
+++ b/Project/searchpage.html
@@ -50,7 +50,12 @@
       </div>
       <div class="form-group" id="Pricerange">
         <label for="Pricerange">Price Range:</label>
-        <input type="text" id="Pricerange" name="Pricerange">
+        <div class="price-range">
+          <span>Min</span>
+          <input type="number" class="input-min">
+          <span>Max</span>
+        <input type="number" class="input-max">
+        </div>
       </div>
           <button type="SearchInstitution" id="searchinstitution-button" style="color: black;">Search Institution</button>
       </form>
