--- a/Project/fav.html
+++ b/Project/fav.html
@@ -31,7 +31,7 @@
   </nav>
 
   <div class="content fav">
-    <h1 style="color: white;"> Your Favourites lists</h1>
+    <h1> Your Favourites lists</h1>
     <table style="background-color: aliceblue;">
       <tr>
         <th>S.N</th>
