--- a/Project/resultofcrosscredit.html
+++ b/Project/resultofcrosscredit.html
@@ -30,8 +30,8 @@
     </ul>
   </nav>
   <div class="content credit">
-    <h1 style="color: white;"> Available cross credits</h1>
-    <h2 style="color: white;"> Upon request these are the possible units that can be cross-credited </h2>
+    <h1> Available cross credits</h1>
+    <h2> Upon request these are the possible units that can be cross-credited </h2>
     <table style="background-color: aliceblue;">
       <tr>
         <th>Units</th>
