--- a/Project/resultofsearch.html
+++ b/Project/resultofsearch.html
@@ -31,8 +31,8 @@
   </nav>
 
   <div class="content result">
-    <h1 style="color: white;">Search Results</h1>
-    <table style="background-color: aliceblue;">
+    <h1>Search Results</h1>
+    <table style="background-color: aliceblue">
       <tr>
         <th>S.N</th>
         <th> Institution Name</th>
