--- a/Project/signin.html
+++ b/Project/signin.html
@@ -68,7 +68,7 @@
                     <button type="submit" id="Button">Register</button>
                 </div>
             </form>
-            <p>Already a User? <a href="login.html" style="color: black;">Log In</a> Now!!</p>
+            <p>Already a User? <a href="login.html" style="color: black; text-decoration:underline;">Log In</a> Now!!</p>
         </div>
     </div>
 
