--- a/Project/login.html
+++ b/Project/login.html
@@ -32,13 +32,13 @@
   <div class="content">
     <div class="form-container" style="text-align: center;">
       <form method="GET" action="userprofile.html" class="form-grid">
-        <div class="form-group" id="Username">
-        <label for="Username">User Name:</label>
-        <input type="text" id="Username" name="Username">
+        <div class="form-group" id="Email">
+        <label for="Email">Email Address:</label>
+        <input type="email" id="email" name="email">
       </div>
       <div class="form-group" id="Password">
         <label for="Password">Password:</label>
-        <input type="text" id="Location" name="Location">
+        <input type="password" id="Password" name="Password">
       </div>
           <button type="Login" id="Login" style="color: black;">Log In</button>
       </form>
