--- a/Project/userprofile.html
+++ b/Project/userprofile.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="design.css">
     <link rel="icon" type="image/png" href="Favicon.png">
+    <script src="mywebscript.js"></script>
     <title>User Profile - Studitute Portal</title>
 </head>
 <body>
@@ -35,7 +36,7 @@
         <div class="profile-card">
             <h2>User Profile</h2>
             <div class="profile-info">
-                <label>User Name:</label>
+                <label>Full Name:</label>
                 <p>John Doe</p>
             </div>
             <div class="profile-info">
@@ -45,10 +46,6 @@
             <div class="profile-info">
                 <label>Mobile Number:</label>
                 <p>+1234567890</p>
-            </div>
-            <div class="profile-info">
-                <label>Date of Birth:</label>
-                <p>January 1, 1990</p>
             </div>
             <div class="profile-info">
                 <label>Short Information:</label>
