--- a/Project/editprofile.html
+++ b/Project/editprofile.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="design.css">
     <link rel="icon" type="image/png" href="Favicon.png">
+    <script src="mywebscript.js"></script>
     <title>Edit Profile - Studitute Portal</title>
 </head>
 <body>
@@ -30,10 +31,10 @@
     <div class="edit-profile-container">
         <div class="edit-profile-card">
             <h2>Edit Profile</h2>
-            <form method="POST" action="saveprofile.html">
+            <form id="editprofile" >
                 <div class="form-group">
-                    <label for="Username">User Name:</label>
-                    <input type="text" id="Username" name="Username" value="John Doe" required>
+                    <label for="Name">Full Name:</label>
+                    <input type="text" id="Name" name="Name" value="John Doe" required>
                 </div>
                 <div class="form-group">
                     <label for="EmailAddress">Email Address:</label>
@@ -44,23 +45,14 @@
                     <input type="text" id="Mobilenumber" name="Mobilenumber" value="+1234567890" required>
                 </div>
                 <div class="form-group">
-                    <label for="DOB">Date of Birth:</label>
-                    <input type="date" id="DOB" name="DOB" value="1990-01-01" required>
-                </div>
-                <div class="form-group">
                     <label for="detailinformation">Short Information:</label>
                     <textarea id="detailinformation" name="detailinformation">Passionate about learning, exploring new technologies, and contributing to the educational community.</textarea>
                 </div>
                 <div class="form-group">
-                    <label for="Password">New Password:</label>
-                    <input type="password" id="Password" name="Password">
+                    <button type="submit" onclick="saveChanges()">Save Changes</button>
                 </div>
                 <div class="form-group">
-                    <label for="ConfirmPassword">Confirm Password:</label>
-                    <input type="password" id="ConfirmPassword" name="ConfirmPassword">
-                </div>
-                <div class="form-group">
-                    <button type="submit">Save Changes</button>
+                    <a href="changepass.html"><button type="button">Change Password</button></a>
                 </div>
             </form>
         </div>
