--- a/Project/resultofsearch.html
+++ b/Project/resultofsearch.html
@@ -40,14 +40,18 @@
         <th> Location</th>
         <th> Duration</th>
         <th>Course</th>
+        <th>Level of Education</th>
+        <th></th>
       </tr>
       <tr>
         <td>1</td>
         <td>XYZ university</td>
-        <td>8,500</td>
+        <td>11,500</td>
         <td>Location</td>
-        <td>3 Years</td>
+        <td>2 Years</td>
         <td>Course</td>
+        <td>Short Course/Diploma</td>
+        <td class="fav-icon"><img class="fav-image" src="FavD.png" alt="Unfavorite" ></td>
       </tr>
       <tr>
         <td>2</td>
@@ -56,22 +60,28 @@
         <td>Location</td>
         <td>3 Years</td>
         <td>Course</td>
+        <td>Undergraduate</td>
+        <td class="fav-icon"><img class="fav-image" src="FavD.png" alt="Unfavorite"></td>
       </tr>
       <tr>
         <td>3</td>
         <td>ABC university</td>
-        <td>8,500</td>
+        <td>9,000</td>
         <td>Location</td>
         <td>3 Years</td>
         <td>Course</td>
+        <td>Undergraduate</td>
+        <td class="fav-icon"><img class="fav-image" src="FavD.png" alt="Unfavorite"></td>
       </tr>
       <tr>
         <td>4</td>
         <td>IJK university</td>
-        <td>8,500</td>
+        <td>10,500</td>
         <td>Location</td>
-        <td>3 Years</td>
+        <td>2 Years</td>
         <td>Course</td>
+        <td>Post Graduate</td>
+        <td class="fav-icon"><img class="fav-image" src="FavD.png" alt="Unfavorite"></td>
       </tr>
     </table>
   </div>
