--- a/Project/searchpage.html
+++ b/Project/searchpage.html
@@ -44,6 +44,16 @@
         <label for="Course">Course:</label>
         <input type="text" id="Course" name="Course">
       </div>
+      <div class="form-group" id="Level">
+        <label for="Level">Level of Education:</label>
+        <input list="levels" name="level">
+        <datalist id="levels">
+          <option value="Short Course/Diploma"></option>
+          <option value="Undergraduate"></option>
+          <option value="Post Graduate"></option>
+          <option value="Research and PHD"></option>
+        </datalist>
+      </div>
       <div class="form-group" id="Duration">
         <label for="Duration">Duration:</label>
         <input type="text" id="Duration" name="Duration">
