--- a/Project/fav.html
+++ b/Project/fav.html
@@ -45,7 +45,7 @@
       </tr>
       <tr>
         <td>1</td>
-        <td>XYZ university</td>
+        <td>Atticus university</td>
         <td>11,500</td>
         <td>Location</td>
         <td>2 Years</td>
@@ -55,7 +55,7 @@
       </tr>
       <tr>
         <td>2</td>
-        <td>EFG university</td>
+        <td>Elior university</td>
         <td>8,500</td>
         <td>Location</td>
         <td>3 Years</td>
@@ -65,7 +65,7 @@
       </tr>
       <tr>
         <td>3</td>
-        <td>ABC university</td>
+        <td>Anniki university</td>
         <td>9,000</td>
         <td>Location</td>
         <td>3 Years</td>
@@ -75,7 +75,7 @@
       </tr>
       <tr>
         <td>4</td>
-        <td>IJK university</td>
+        <td>Osamu university</td>
         <td>10,500</td>
         <td>Location</td>
         <td>2 Years</td>
