--- a/Project/resultofcrosscredit.html
+++ b/Project/resultofcrosscredit.html
@@ -29,6 +29,7 @@
         <li class="nav-item"><a href="contactus.html">Contact Us</a></li>
     </ul>
   </nav>
+  <a href="crosscredit.html" class="back-button"><button onclick="goBack()" class="back-button">Go Back </button></a>
   <div class="content credit">
     <h1> Available cross credits</h1>
     <h2> Upon request these are the possible units that can be cross-credited </h2>
@@ -55,7 +56,7 @@
       </tr>
     </table>
   </div>
-
+</div>
   <div class="footer">
     <p>@Copyright- Studitute Portal: Empowering your Educational Journey</p>
   </div>
