--- a/Project/resultofsearch.html
+++ b/Project/resultofsearch.html
@@ -29,6 +29,7 @@
         <li class="nav-item"><a href="contactus.html">Contact Us</a></li>
     </ul>
   </nav>
+  <a href="searchpage.html" class="back-button"><button onclick="goBack()" class="back-button">Go Back </button></a>
 
   <div class="content result">
     <h1>Search Results</h1>
@@ -89,6 +90,5 @@
   <div class="footer">
     <p>@Copyright- Studitute Portal: Empowering your Educational Journey</p>
   </div>
-
 </body>
 </html>
