--- a/Project/editprofile.html
+++ b/Project/editprofile.html
@@ -31,7 +31,7 @@
     <div class="edit-profile-container">
         <div class="edit-profile-card">
             <h2>Edit Profile</h2>
-            <form id="editprofile" >
+            <form id="editprofile" action="userprofile.html" method="get">
                 <div class="form-group">
                     <label for="Name">Full Name:</label>
                     <input type="text" id="Name" name="Name" value="John Doe" required>
@@ -55,6 +55,7 @@
                     <a href="changepass.html"><button type="button">Change Password</button></a>
                 </div>
             </form>
+            <p><a href="userprofile.html" style="color: black; text-decoration:underline;">Back to <strong>User Profile</strong></a></p>
         </div>
     </div>
 
