--- a/Project/fav.html
+++ b/Project/fav.html
@@ -84,6 +84,7 @@
         <td class="fav-icon"><img class="fav-image" src="FavC.png" alt="favorite"></td>
       </tr>
     </table>
+    <p><a href="homepage.html" style="color: black; text-decoration:underline;">Back to Homepage</a></p>
   </div>
 
   <div class="footer">
