--- a/Project/login.html
+++ b/Project/login.html
@@ -42,8 +42,9 @@
       </div>
           <button type="Login" id="Login" style="color: black;">Log In</button>
       </form>
-      <p>New User<br>
+      <p>New User?<br>
       <a href="signin.html" style="color: black; text-decoration:underline;">Sign Up</a> Now!!</p>
+      <p><a href="homepage.html" style="color: black; text-decoration:underline;">Back to Homepage</a></p>
     </div>
   </div>
 
