--- a/Project/resultofcrosscredit.html
+++ b/Project/resultofcrosscredit.html
@@ -29,7 +29,7 @@
         <li class="nav-item"><a href="contactus.html">Contact Us</a></li>
     </ul>
   </nav>
-  <a href="crosscredit.html" class="back-button"><button onclick="goBack()" class="back-button">Go Back </button></a>
+  
   <div class="content credit">
     <h1> Available cross credits</h1>
     <h2> Upon request these are the possible units that can be cross-credited </h2>
@@ -55,8 +55,8 @@
         <td>The unit learning objectives  of source institution and destination institution are similar.</td>
       </tr>
     </table>
+    <p><a href="crosscredit.html" style="color: black; text-decoration:underline;">Back to <strong>Check Cross Credit</strong></a></p>
   </div>
-</div>
   <div class="footer">
     <p>@Copyright- Studitute Portal: Empowering your Educational Journey</p>
   </div>
