--- a/Project/resultofsearch.html
+++ b/Project/resultofsearch.html
@@ -29,7 +29,7 @@
         <li class="nav-item"><a href="contactus.html">Contact Us</a></li>
     </ul>
   </nav>
-  <a href="searchpage.html" class="back-button"><button onclick="goBack()" class="back-button">Go Back </button></a>
+  
 
   <div class="content result">
     <h1>Search Results</h1>
@@ -85,6 +85,7 @@
         <td class="fav-icon"><img class="fav-image" src="FavD.png" alt="Unfavorite"></td>
       </tr>
     </table>
+    <p><a href="searchpage.html" style="color: black; text-decoration:underline;">Back to <strong>Search</strong></a></p>
   </div>
 
   <div class="footer">
