--- a/Project/searchpage.html
+++ b/Project/searchpage.html
@@ -69,6 +69,7 @@
       </div>
           <button type="SearchInstitution" id="searchinstitution-button" style="color: black;">Search Institution</button>
       </form>
+      <p><a href="homepage.html" style="color: black; text-decoration:underline;">Back to Homepage</a></p>
     </div>
   </div>
 
