--- a/Project/signin.html
+++ b/Project/signin.html
@@ -59,11 +59,20 @@
                     <input type="text" id="Mobilenumber" name="Mobilenumber" required onclick="changeBackofMobilenumber()" onblur="changeBackofMobilenumber()">
                 </div>
 
+                <!-- Updated Terms and Conditions Checkbox -->
+                <div class="form-group share-info">
+                    <input type="checkbox" id="termsConditions" name="termsConditions" required>
+                    <label for="termsConditions">
+                        I agree to the <a href="T&C.pdf" target="_blank" style="color: black; text-decoration:underline;">Terms and Conditions</a> and <a href="Privacy.pdf" target="_blank" style="color: black; text-decoration:underline;">Privacy Policies</a>.
+                    </label>
+                </div>
+
                 <div class="form-group" id="register-group">
                     <button type="submit" id="Button">Register</button>
                 </div>
             </form>
             <p>Already a User? <a href="login.html" style="color: black; text-decoration:underline;">Log In</a> Now!!</p>
+            <p><a href="homepage.html" style="color: black; text-decoration:underline;">Back to Homepage</a></p>
         </div>
     </div>
 
