--- a/Project/userprofile.html
+++ b/Project/userprofile.html
@@ -18,7 +18,7 @@
             <p class="subtitle">Empowering your Educational Journey</p>
         </div>
         <div class="profile">
-            <img class="guest" src="UserProfile.jpg" alt="User pic"><br>
+            <img class="guest" src="Guest.jpg" alt="User pic"><br>
             <h3>User Name</h3>
         </div>
     </div>
@@ -54,6 +54,7 @@
             <div class="edit-profile-link">
                 <a href="editprofile.html">Edit Profile</a>
             </div>
+            <p><a href="homepage.html" style="color: black; text-decoration:underline;">Back to Homepage</a></p>
         </div>
     </div>
 
