--- a/Project/resultofsearch.html
+++ b/Project/resultofsearch.html
@@ -46,7 +46,7 @@
       </tr>
       <tr>
         <td>1</td>
-        <td>Atticus university</td>
+        <td>Charles Darwin university</td>
         <td>11,500</td>
         <td>Location</td>
         <td>2 Years</td>
@@ -56,7 +56,7 @@
       </tr>
       <tr>
         <td>2</td>
-        <td>Elior university</td>
+        <td>University of Canberra</td>
         <td>8,500</td>
         <td>Location</td>
         <td>3 Years</td>
@@ -66,7 +66,7 @@
       </tr>
       <tr>
         <td>3</td>
-        <td>Anniki university</td>
+        <td>Victoria university</td>
         <td>9,000</td>
         <td>Location</td>
         <td>3 Years</td>
@@ -76,7 +76,7 @@
       </tr>
       <tr>
         <td>4</td>
-        <td>Osamu university</td>
+        <td>Crown Institute of Higher Education</td>
         <td>10,500</td>
         <td>Location</td>
         <td>2 Years</td>
