--- a/Project/fav.html
+++ b/Project/fav.html
@@ -45,41 +45,41 @@
       </tr>
       <tr>
         <td>1</td>
-        <td>Charles Darwin university</td>
+        <td>Canberra Institute of Technology</td>
         <td>11,500</td>
-        <td>Location</td>
-        <td>2 Years</td>
-        <td>Course</td>
+        <td>Canberra</td>
+        <td>1.5 Years</td>
+        <td>Diploma in Nursing</td>
         <td>Short Course/Diploma</td>
         <td class="fav-icon"><img class="fav-image" src="FavC.png" alt="favorite"></td>
       </tr>
       <tr>
         <td>2</td>
         <td>University of Canberra</td>
-        <td>8,500</td>
-        <td>Location</td>
+        <td>15,500</td>
+        <td>Canberra</td>
         <td>3 Years</td>
-        <td>Course</td>
+        <td>Bachelor in Nursing</td>
         <td>Undergraduate</td>
         <td class="fav-icon"><img class="fav-image" src="FavC.png" alt="favorite"></td>
       </tr>
       <tr>
         <td>3</td>
         <td>Victoria university</td>
-        <td>9,000</td>
-        <td>Location</td>
+        <td>14,000</td>
+        <td>Melbourne</td>
         <td>3 Years</td>
-        <td>Course</td>
+        <td>Bachelor of Information Technology</td>
         <td>Undergraduate</td>
         <td class="fav-icon"><img class="fav-image" src="FavC.png" alt="favorite"></td>
       </tr>
       <tr>
         <td>4</td>
-        <td>Crown Institute of Higher Education</td>
-        <td>10,500</td>
-        <td>Location</td>
+        <td>Charles Darwin university</td>
+        <td>16,500</td>
+        <td>Sydney</td>
         <td>2 Years</td>
-        <td>Course</td>
+        <td>Master in Nursing</td>
         <td>Post Graduate</td>
         <td class="fav-icon"><img class="fav-image" src="FavC.png" alt="favorite"></td>
       </tr>
