--- a/Project/contactus.html
+++ b/Project/contactus.html
@@ -40,12 +40,16 @@
         <label for="Email">Email:</label>
         <input type="text" id="Email" name="Email">
       </div>
+      <div class="form-group" id="mobilenum">
+        <label for="mobilenum">Mobile Number</label>
+        <input type="number" id="mobilenum" name="mobilenum">
+      </div>
       <div class="form-group" id="Message">
         <label for="Message">Message:</label>
         <textarea id="Message" name="Message"></textarea>
       </div>
       <div class="form-group">
-      <button type="submit" onclick="saveChanges()">Save Changes</button>
+      <button type="submit" onclick="contactUs()">Contact Us</button>
     </div>
       </form>
       <p><a href="homepage.html" style="color: black; text-decoration:underline;">Back to Homepage</a></p>
