--- a/Project/resultofcrosscredit.html
+++ b/Project/resultofcrosscredit.html
@@ -35,22 +35,27 @@
     <h2> Upon request these are the possible units that can be cross-credited </h2>
     <table style="background-color: aliceblue;">
       <tr>
-        <th>Units</th>
+        <th>Units of Source Institution</th>
+        <th>Units of Destination Institution</th>
         <th> Reason for possible cross-credit</th>
       </tr>
       <tr>
+        <td>Web Development</td>
         <td>Web Application</td>
         <td>The unit learning objectives  of source institution and destination institution are similar.</td>
       </tr>
       <tr>
+        <td>Network and Cyber Security</td>
         <td>Cyber security</td>
         <td>The unit learning objectives  of source institution and destination institution are similar.</td>
       </tr>
       <tr>
+        <td>Introduction to Programming</td>
         <td>Programming</td>
         <td>The unit learning objectives  of source institution and destination institution are similar.</td>
       </tr>
       <tr>
+        <td>Networking and CISCO</td>
         <td>Networking</td>
         <td>The unit learning objectives  of source institution and destination institution are similar.</td>
       </tr>
