--- a/Project/changepass.html
+++ b/Project/changepass.html
@@ -45,7 +45,7 @@
             <input type="password" id="ConfirmPassword" name="ConfirmPassword" required>
         </div><br>
         <div class="form-group">
-            <button type="submit" onclick="saveChanges()">Save Changes</button>
+            <button type="submit" onclick="saveChanges()">Change Password</button>
         </div>
     </form>
     <p><a href="editprofile.html" style="color: black; text-decoration:underline;">Back to <strong>Edit Profile</strong></a></p>
