--- a/Project/userprofile.html
+++ b/Project/userprofile.html
@@ -17,9 +17,9 @@
             <div class="title">Studitute Portal</div>
             <p class="subtitle">Empowering your Educational Journey</p>
         </div>
-        <div class="profile">
+        <div class="profile"><a href="homepage.html" onclick="logoutSuccess()">
             <img class="guest" src="Guest.jpg" alt="User pic"><br>
-            <h3>User Name</h3>
+            <h3>Log Out</h3></a>
         </div>
     </div>
 
