--- a/Project/searchpage.html
+++ b/Project/searchpage.html
@@ -58,7 +58,7 @@
         <input type="text" id="Duration" name="Duration">
       </div>
       <div class="form-group" id="Pricerange">
-        <label for="Pricerange">Price Range:</label>
+        <label for="Pricerange">Fee Range:</label>
         <div class="price-range">
           <span>Min</span>
           <input type="number" class="input-min">
