--- a/Project/crosscredit.html
+++ b/Project/crosscredit.html
@@ -36,9 +36,9 @@
         <label for="SourceInstitution">Source Institution:</label>
         <input type="text" id="SourceInstitution" name="SourceInstitution">
       </div>
-      <div class="form-group" id="Course">
-        <label for="Course">Course:</label>
-        <input type="text" id="Course" name="Course">
+      <div class="form-group" id="Source Course">
+        <label for="Source Course">Source Course:</label>
+        <input type="text" id="Source Course" name="Source Course">
       </div>
       <div class="form-group" id="Level">
         <label for="Level">Level of Education:</label>
@@ -48,6 +48,10 @@
           <option value="Undergraduate"></option>
           <option value="Post Graduate"></option>
         </datalist>
+      </div>
+      <div class="form-group" id="Destination Course">
+        <label for="Destination Course">Destination Course:</label>
+        <input type="text" id="Destination Course" name="Destination Course">
       </div>
       <div class="form-group" id="DestinationInstitution">
         <label for="DestinationInstitution">Destination Institution:</label>
