--- a/Project/searchpage.html
+++ b/Project/searchpage.html
@@ -57,9 +57,9 @@
         <label for="Duration">Duration:</label>
         <input type="text" id="Duration" name="Duration">
       </div>
-      <div class="form-group" id="Pricerange">
-        <label for="Pricerange">Fee Range:</label>
-        <div class="price-range">
+      <div class="form-group" id="feerange">
+        <label for="feerange">Tution Fee Range:</label>
+        <div class="fee-range">
           <span>Min</span>
           <input type="number" class="input-min">
           <span>Max</span>
