--- a/Project/changepass.html
+++ b/Project/changepass.html
@@ -36,16 +36,17 @@
                 <label for="OldPassword">Old Password:</label>
                 <input type="password" id="OldPassword" name="OldPassword" required>
             </div><br>
+            <div class="form-group" id="password-group">
+              <label for="Password">Password:</label>
+              <input type="password" id="Password" name="Password" required>
+          </div>
+          <div class="form-group">
+              <label for="ConfirmPassword">Confirm Password:</label>
+              <input type="password" id="ConfirmPassword" name="ConfirmPassword" required>
+              <span id="password-error" style="color: red;"></span> <!-- Error message for password mismatch -->
+          </div>
         <div class="form-group">
-            <label for="NewPassword">New Password:</label>
-            <input type="password" id="NewPassword" name="NewPassword" required>
-        </div><br>
-        <div class="form-group">
-            <label for="ConfirmPassword">Confirm Password:</label>
-            <input type="password" id="ConfirmPassword" name="ConfirmPassword" required>
-        </div><br>
-        <div class="form-group">
-            <button type="submit" onclick="saveChanges()">Change Password</button>
+          <button type="submit" id="Button" onclick="return checkPasswordMatch()">Change Password</button>
         </div>
     </form>
     <p><a href="editprofile.html" style="color: black; text-decoration:underline;">Back to <strong>Edit Profile</strong></a></p>
