--- a/Project/login.html
+++ b/Project/login.html
@@ -38,7 +38,12 @@
       </div>
       <div class="form-group" id="Password">
         <label for="Password">Password:</label>
-        <input type="password" id="Password" name="Password">
+        <div class="password-container">
+          <input type="password" id="Password" name="Password" required>
+          <span class="toggle-password" onclick="togglePasswordVisibility('Password', this)">
+              <img src="ceye-icon.png" alt="Show Password">
+          </span>
+      </div>
       </div>
           <button type="Login" id="Login" style="color: black;">Log In</button>
       </form>
