--- a/Project/detailsofinst.html
+++ b/Project/detailsofinst.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="design.css">
-<script src="mywebscript.js"></script>
-<link rel="icon" type="image/png" href="Favicon.png">
-<title>Details of Institution - Studitute Portal</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="design.css">
+    <script src="mywebscript.js"></script>
+    <link rel="icon" type="image/png" href="Favicon.png">
+    <title>Details of Institution - Studitute Portal</title>
 </head>
 <body>
 
   <div class="header">
-    <a href="homepage.html"  class="logo-container"><img src="Logo.jpg" alt="Logo" class="logo"></a>
+    <a href="homepage.html" class="logo-container"><img src="Logo.jpg" alt="Logo" class="logo"></a>
     <div class="title-container">
       <div class="title">Studitute Portal</div>
       <p class="subtitle">Empowering your Educational Journey</p>
     </div>
-    <div class="profile"><a href="login.html">
-      <img class="guest" src="Guest.jpg" alt="Guest pic"><br>
-      <h3>Log In</h3></a>
+    <div class="profile">
+      <a href="login.html">
+        <img class="guest" src="Guest.jpg" alt="Guest pic"><br>
+        <h3>Log In</h3>
+      </a>
     </div>
   </div>
 
@@ -31,11 +33,55 @@
   </nav>
 
   <div class="content">
-    <p style="text-align: center:justify; font-size: 30px;">Et irure enim irure eiusmod. Commodo sunt qui dolor labore. Commodo cillum ex enim aliquip. Dolore ullamco dolore veniam occaecat sint laborum dolor id consequat officia dolor consequat. Labore Lorem Lorem dolor ex. Proident ea tempor tempor voluptate eu incididunt quis consequat velit exercitation do.</p>
+    <div class="institution-details">
+        <h1>Victoria University</h1>
+        <p><strong>Level:</strong> 2</p>
+        <p><strong>Locations:</strong> Melbourne, Sydney, Canberra</p>
+        
+        <h2>Programs Offered</h2>
+        <div class="program">
+            <h3>Information Technology</h3>
+            <p><strong>Program:</strong> Bachelor of IT</p>
+            <p><strong>Duration:</strong> 3 years</p>
+            <p><strong>Tuition Fee:</strong> $8500 per semester</p>
+            <p>A comprehensive program designed to equip students with advanced skills in software development, network security, and data management.</p>
+        </div>
+        <div class="program">
+            <h3>Hospitality and Culinary Arts</h3>
+            <p><strong>Program:</strong> Diploma of Cookery</p>
+            <p><strong>Duration:</strong> 2 years</p>
+            <p><strong>Tuition Fee:</strong> $13,500 per semester</p>
+            <p>This course offers hands-on culinary training, teaching students the art of cooking, kitchen management, and contemporary culinary techniques.</p>
+        </div>
+        <div class="program">
+            <h3>Accounting</h3>
+            <p><strong>Program:</strong> Bachelor of Accounting</p>
+            <p><strong>Duration:</strong> 3 years</p>
+            <p><strong>Tuition Fee:</strong> $8500 per semester</p>
+            <p>A thorough program that covers financial accounting, management accounting, auditing, and taxation, preparing students for various roles in the financial sector.</p>
+        </div>
+
+        <h2>Work Integrated Learning</h2>
+        <p>Victoria University prides itself on integrating practical experience with academic learning. Through its Work Integrated Learning (WIL) program, students have the opportunity to engage in real-world projects and internships, gaining valuable industry experience and professional connections.</p>
+
+        <h2>Campus Locations</h2>
+        <div class="campus">
+            <h3>Melbourne</h3>
+            <p>Located in the vibrant city of Melbourne, the campus offers a dynamic learning environment with access to a bustling tech and cultural scene.</p>
+        </div>
+        <div class="campus">
+            <h3>Sydney</h3>
+            <p>The Sydney campus provides a unique blend of urban living and academic excellence, situated in one of Australia's most iconic cities.</p>
+        </div>
+        <div class="campus">
+            <h3>Canberra</h3>
+            <p>In the heart of Australia’s capital, the Canberra campus offers a peaceful and focused academic setting, close to governmental and national institutions.</p>
+        </div>
+    </div>
   </div>
 
   <div class="footer">
-    <p>@Copyright- Studitute Portal: Empowering your Educational Journey</p>
+    <p>&copy; Studitute Portal: Empowering your Educational Journey</p>
   </div>
 
 </body>
